# roxy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  llms.txt
.github/workflows/: release.yml
benches/: body_start.rs  envelope.rs  parse.rs  request_id.rs
docs/: BENCHMARKS.md  USER_GUIDE.md
examples/: bench_client.rs  echo_upstream.rs  handler.php  handler.py  handler.ts
i18n/: README.be.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.pl.md  README.ru.md  README.uk.md  README.zh-CN.md
packaging/homebrew/: README.md  roxy.rb
scripts/: bench.sh  mcpb.sh
src/: config.rs  lib.rs  main.rs  protocol.rs  server.rs
src/executor/: fastcgi.rs  http.rs  mod.rs
