[package]
name = "roxy"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
rmcp = { version = "1.3", features = ["server", "transport-io", "transport-streamable-http-server", "elicitation"] }
uuid = { version = "1", features = ["v4"] }
http = "1"
fastcgi-client = { version = "0.11", features = ["runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }
tokio-util = { version = "0.7", features = ["compat"] }
deadpool = { version = "0.12", features = ["managed"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
