[package]
name = "roxy"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "High-performance MCP (Model Context Protocol) proxy server. Bridges MCP clients to FastCGI or HTTP backends."
homepage = "https://github.com/petstack/roxy"
repository = "https://github.com/petstack/roxy"
readme = "README.md"
keywords = ["mcp", "proxy", "fastcgi", "http", "server"]
categories = ["command-line-utilities", "network-programming", "web-programming"]

[dependencies]
rmcp = { version = "1.3", features = ["server", "transport-io", "transport-streamable-http-server", "elicitation"] }
uuid = { version = "1", features = ["v4"] }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
fastcgi-client = { version = "0.11", features = ["runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }
tokio-util = { version = "0.7", features = ["compat"] }
deadpool = { version = "0.12", features = ["managed"] }
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
temp-env = "0.3"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "body_start"
harness = false

[[bench]]
name = "request_id"
harness = false

[[bench]]
name = "envelope"
harness = false

# Release build with line tables — for samply / cargo-flamegraph.
# Slightly bigger binary, identical codegen. Use via
# `cargo build --profile profiling`.
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"

# -----------------------------------------------------------------------------
# cargo-deb: Debian/Ubuntu .deb package
# -----------------------------------------------------------------------------
[package.metadata.deb]
maintainer = "Vasili Kamrakou <diolektor@gmail.com>"
copyright = "2026, Vasili Kamrakou <diolektor@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
roxy is a high-performance MCP (Model Context Protocol) proxy server written in Rust.
It bridges MCP clients (Claude Desktop, Cursor, etc.) to any backend handler via FastCGI
(e.g. PHP-FPM) or HTTP(S). Transport is handled by the rmcp crate; business logic is
delegated to the upstream over a simple JSON protocol.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/roxy", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/roxy/README.md", "644"],
    ["LICENSE", "usr/share/doc/roxy/LICENSE", "644"],
]

# -----------------------------------------------------------------------------
# cargo-generate-rpm: Fedora/RHEL/openSUSE .rpm package
# -----------------------------------------------------------------------------
[package.metadata.generate-rpm]
summary = "High-performance MCP proxy server"
assets = [
    { source = "target/release/roxy", dest = "/usr/bin/roxy", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/roxy/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/licenses/roxy/LICENSE", mode = "644" },
]
